--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
-apply plugin 'java'
-apply plugin 'eclipse'
-apply plugin 'idea'
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	compil 'junit:junit:4.12'
+	compile 'junit:junit:4.12'
 }
