--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'findbugs'
 apply plugin: 'pmd'
-apply plugin: 'checkstyle
+//apply plugin: 'checkstyle'
 
 repositories {
 	mavenCentral()
@@ -11,4 +11,15 @@ repositories {
 
 dependencies {
 	compile 'junit:junit:4.12'
+}
+
+pmd {
+	toolVersion = '4.3'
+	ignoreFailures = true
+	sourceSets = [sourceSets.main]
+	reportsDir = file("$project.buildDir/reports/pmd")
+	ruleSets = [
+		"basic",
+		"braces"
+	]
 }
