--- a/build.gradle
+++ b/build.gradle
@@ -21,12 +21,46 @@ findbugs {
 }
 
 pmd {
-	toolVersion = '4.3'
+	toolVersion = '5.1.1'
 	ignoreFailures = true
 	sourceSets = [sourceSets.main]
 	reportsDir = file("$project.buildDir/reports/pmd")
 	ruleSets = [
-		"basic",
-		"braces"
-	]
+        'java-android',
+        'java-basic',
+        'java-braces',
+        'java-clone',
+        'java-codesize',
+        'java-comments',
+        'java-controversial',
+        'java-coupling',
+        'java-design',
+        'java-empty',
+        'java-finalizers',
+        'java-imports',
+        'java-j2ee',
+        'java-javabeans',
+        'java-junit',
+        'java-logging-jakarta-commons',
+        'java-logging-java',
+        'java-migrating',
+        'java-naming',
+        'java-optimizations',
+        'java-strictexception',
+        'java-strings',
+        'java-sunsecure',
+        'java-typeresolution',
+        'java-unnecessary',
+        'java-unusedcode'           
+        ]
 }
+
+/*
+tasks.withType(Checkstyle) {
+    reports {
+        xml.enabled true
+        html.enabled false
+        //html.stylesheet resources.text.fromFile('config/xsl/checkstyle-custom.xsl')
+    }
+}
+*/
