--- a/build.gradle
+++ b/build.gradle
@@ -58,14 +58,5 @@ pmd {
 
 checkstyle {
     toolVersion = '7.2'
+    ignoreFailures = true
 }
-
-/*
-tasks.withType(Checkstyle) {
-    reports {
-        xml.enabled true
-        html.enabled false
-        //html.stylesheet resources.text.fromFile('config/xsl/checkstyle-custom.xsl')
-    }
-}
-*/
