--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'findbugs'
-//apply plugin: 'pmd'
-//apply plugin: 'checkstyle'
+apply plugin: 'pmd'
+apply plugin: 'checkstyle'
 
 repositories {
 	mavenCentral()
