--- a/build.gradle
+++ b/build.gradle
@@ -1,87 +1,64 @@
-buildscript {
-  ext.kotlinVersion = '1.2.0'
-
-  repositories {
-    jcenter()
-    maven { url "https://plugins.gradle.org/m2/" }
-  }
-
-  dependencies {
-    classpath 'com.gradle.publish:plugin-publish-plugin:0.9.9'
-    classpath 'com.github.ben-manes:gradle-versions-plugin:0.17.0'
-    classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.11.0'
-  }
-}
-
-apply plugin: 'groovy'
 apply plugin: 'java'
-apply plugin: 'com.github.ben-manes.versions'
-apply plugin: 'com.gradle.plugin-publish'
-apply plugin: 'com.vanniktech.android.junit.jacoco'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'findbugs'
+apply plugin: 'pmd'
+apply plugin: 'checkstyle'
 
 repositories {
-  jcenter()
-  google()
-  maven { url "https://plugins.gradle.org/m2/" }
+	mavenCentral()
 }
 
 dependencies {
-  compile gradleApi()
-  compile localGroovy()
-  compile 'com.android.tools.build:gradle:3.0.1'
-  compile 'de.aaschmid:gradle-cpd-plugin:1.1'
-  compile 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.13'
-
-  testCompile 'junit:junit:4.12'
-  testCompile "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+	compile 'junit:junit:4.12'
 }
 
-sourceCompatibility = JavaVersion.VERSION_1_7
-
-pluginBundle {
-
-  plugins {
-    codeQualityTools {
-      id = 'com.vanniktech.code.quality.tools'
-      tags = ['gradle', 'android', 'java', 'findbugs', 'pmd', 'cpd', 'detekt', 'kotlin', 'ktlint', 'checkstyle', 'errorprone', 'multiprojects', 'app module', 'library module', 'lint']
-    }
-  }
+findbugs {
+	ignoreFailures = true
+	//toolVersion = "2.0.1"
+	//sourceSets = [sourceSets.main]
+	reportsDir = file("$project.buildDir/reports/findbugs")
+	effort = "max"
+	showProgress = true
+    reportLevel = "high"
 }
 
-task wrapper(type: Wrapper) {
-  gradleVersion = '4.4.1'
-  distributionType = Wrapper.DistributionType.ALL
+pmd {
+	toolVersion = '5.2.2'
+	ignoreFailures = true
+	sourceSets = [sourceSets.main]
+	reportsDir = file("$project.buildDir/reports/pmd")
+	ruleSets = [
+        'java-android',
+        'java-basic',
+        'java-braces',
+        'java-clone',
+        'java-codesize',
+        'java-comments',
+        'java-controversial',
+        'java-coupling',
+        'java-design',
+        'java-empty',
+        'java-finalizers',
+        'java-imports',
+        'java-j2ee',
+        'java-javabeans',
+        'java-junit',
+        'java-logging-jakarta-commons',
+        'java-logging-java',
+        'java-migrating',
+        'java-naming',
+        'java-optimizations',
+        'java-strictexception',
+        'java-strings',
+        'java-sunsecure',
+        'java-typeresolution',
+        'java-unnecessary',
+        'java-unusedcode'           
+        ]
 }
 
-task groovydocJar(type: Jar, dependsOn: groovydoc) {
-  classifier = 'groovydoc'
-  from 'build/docs/groovydoc'
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-  classifier = 'javadoc'
-  from 'build/docs/javadoc'
-}
-
-task sourcesJar(type: Jar) {
-  from sourceSets.main.allSource
-  classifier = 'sources'
-}
-
-artifacts {
-  archives jar
-  archives groovydocJar
-  archives javadocJar
-  archives sourcesJar
-}
-
-apply plugin: 'maven-publish'
-
-publishing {
-  publications {
-    main(MavenPublication) {
-      from components.java
-      artifact sourcesJar
-    }
-  }
+checkstyle {
+    toolVersion = '7.2'
+    ignoreFailures = true
 }
