--- a/build.gradle
+++ b/build.gradle
@@ -62,3 +62,29 @@ checkstyle {
     toolVersion = '7.2'
     ignoreFailures = true
 }
+
+// CPD Hack
+task cpdMain(dependsOn: 'pmdMain') {
+  ext.ignoreFailures = true
+
+  doLast {
+    File outDir = new File(reporting.baseDir, 'cpd/')
+    // Make sure the output dir exists to prevent a ReportException
+    outDir.mkdirs()
+
+    ant.taskdef(name: 'cpd', classname: 'net.sourceforge.pmd.cpd.CPDTask',
+            classpath: configurations.pmd.asPath)
+
+    ant.cpd(
+        minimumTokenCount: '100',
+        format: 'xml',
+        outputFile: new File(outDir , 'main.xml')) {
+        fileset(dir: projectDir.getPath()) {
+              sourceSets.main.java.each { sourceDir ->
+                include(name: project.relativePath(sourceDir.getPath()))
+            }
+          }
+    }
+  }
+}
+check.dependsOn cpdMain
