optimize build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -7,29 +7,29 @@ apply plugin: 'checkstyle'
 apply plugin: 'jacoco'
 
 repositories {
-	mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-	compile 'junit:junit:4.12'
+  compile 'junit:junit:4.12'
 }
 
 findbugs {
-	ignoreFailures = true
-	//toolVersion = "2.0.1"
-	//sourceSets = [sourceSets.main]
-	reportsDir = file("$project.buildDir/reports/findbugs")
-	effort = "max"
-	showProgress = true
+  ignoreFailures = true
+  //toolVersion = "2.0.1"
+  sourceSets = [sourceSets.main]
+  reportsDir = file("$project.buildDir/reports/findbugs")
+  effort = "max"
+  showProgress = true
     reportLevel = "high"
 }
 
 pmd {
-	toolVersion = '5.2.2'
-	ignoreFailures = true
-	sourceSets = [sourceSets.main]
-	reportsDir = file("$project.buildDir/reports/pmd")
-	ruleSets = [
+  toolVersion = '5.2.2'
+  ignoreFailures = true
+  sourceSets = [sourceSets.main]
+  reportsDir = file("$project.buildDir/reports/pmd")
+  ruleSets = [
         'java-android',
         'java-basic',
         'java-braces',
@@ -55,7 +55,7 @@ pmd {
         'java-sunsecure',
         'java-typeresolution',
         'java-unnecessary',
-        'java-unusedcode'           
+        'java-unusedcode'
         ]
 }
 
@@ -67,28 +67,31 @@ checkstyle {
 
 // CPD Hack
 task cpdMain(dependsOn: 'pmdMain') {
-  ext.ignoreFailures = true
+    ext.ignoreFailures = true
 
-  doLast {
-    File outDir = new File(reporting.baseDir, 'cpd/')
-    // Make sure the output dir exists to prevent a ReportException
-    outDir.mkdirs()
+    doLast {
+        File outDir = new File(reporting.baseDir, 'cpd/')
+        // Make sure the output dir exists to prevent a ReportException
+        outDir.mkdirs()
 
-    ant.taskdef(name: 'cpd', classname: 'net.sourceforge.pmd.cpd.CPDTask',
-            classpath: configurations.pmd.asPath)
+        ant.taskdef(
+            name: 'cpd', classname: 'net.sourceforge.pmd.cpd.CPDTask',
+            classpath: configurations.pmd.asPath
+        )
 
-    ant.cpd(
-        minimumTokenCount: '100',
-        format: 'xml',
-        outputFile: new File(outDir , 'main.xml')) {
-        fileset(dir: projectDir.getPath()) {
-              sourceSets.main.java.each { sourceDir ->
-                include(name: project.relativePath(sourceDir.getPath()))
+        ant.cpd(
+            minimumTokenCount: '100',
+            format: 'xml',
+            outputFile: new File(outDir , 'main.xml')) {
+                fileset(dir: projectDir.getPath()) {
+                    sourceSets.main.java.each {
+                        sourceDir -> include(name: project.relativePath(sourceDir.getPath()))
+                    }
+                }
             }
-          }
     }
-  }
 }
+
 check.dependsOn cpdMain
 
 jacoco {
